[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "segment_every_grain"
version = "0.0.1"
authors = [
  { name="Zoltan Sylvester", email="zoltan.sylvester@beg.utexas.edu" },
]
description = "A SAM-based model for segmenting grains in images of grains"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zsylvester/segment_every_grain"
"Bug Tracker" = "https://github.com/zsylvester/segment_every_grain/issues"