[build-system]
requires = ["setuptools>=68", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "segmenteverygrain"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
  { name="Zoltan Sylvester", email="zoltan.sylvester@beg.utexas.edu" },
]
description = "A SAM-based model for segmenting grains in images"
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["geology", "geoscience", "sedimentology", "geomorphology", "machine learning", "segmentation", "deep learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "tqdm",
    "opencv-python",
    "networkx",
    "rasterio",
    "shapely",
    "tensorflow",
    "torch",
    "torchvision",
    "segment-anything"
]

[tool.setuptools.packages.find]
where = ["segmenteverygrain"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/zsylvester/segmenteverygrain"
"Bug Tracker" = "https://github.com/zsylvester/segmenteverygrain/issues"